# zelari-code

./: .gitignore  AGENTS.MD  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF-kraken.md  HANDOFF-v0.10.0.md  HANDOFF.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: GUIDA.md  README.md  TOOLS.md  triggers.md
scripts/: bump-version.mjs  bundle-cli.mjs  dev-coding-task.mjs  dev-council-task-src.mjs  dev-council-task.mjs  dev-dogfood-agents-md.mjs  dev-explore-flows.mjs  dev-login-grok.mjs  dev-refresh-grok.mjs  diagnose-path.ps1  dump-council-tools.mjs  dump-path.ps1  fix-path.ps1  live-council-testmcp.mjs  patch-agent-harness-texttools.mjs  patch-agents-md-completion.mjs  patch-agents-md-test.mjs  patch-council-api.mjs  patch-council-final-scan.mjs  patch-council-microgate.mjs  patch-council-phase-b.mjs  patch-council-phase-e.mjs  patch-edit-file-zero.mjs  patch-headless-baseurl.mjs  patch-plan-reality.mjs  patch-stubs-roles.mjs  patch-tests.mjs  patch-texttools-fix.py  patch-tool-schema-empty-array.mjs  patch-useChatTurn-fix.mjs  patch-useChatTurn-phase-b.mjs  path-length.ps1  postinstall.mjs  prepublish.mjs  repair-path.mjs  replay-testmcp.mjs  run-zelari-mission-live.mjs  start-companion-serve.ps1  verify-council.mjs  write-landing-completion.mjs  (+2 more)
(+489 files in other folders)
