[package]
name = "zelari-desktop"
version = "1.20.0"
description = "Zelari Desktop — coding agent shell (Tauri 2) over @zelari/core"
authors = ["N-THEM Studio"]
edition = "2021"

[lib]
name = "zelari_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
